# microrust-discovery

microbit/src/05-led-roulette/: Cargo.toml  Embed.toml
microbit/src/05-led-roulette/src/: main.rs
